# HendrixVideo

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_UNIFICATION_SUMMARY.md  Dockerfile  EVALUATION_REPORT.md  GPU_OPTIMIZATION_GUIDE.md  LICENSE  LOGGING_IMPROVEMENTS.md  MANIFEST.in  Makefile  PIPELINE_STATUS.md  PROJECT_STATUS.md  README.md  README_TEST.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  REORGANIZATION_SUMMARY.md  REQUIREMENTS_STRUCTURE.md  SPEAKER_DIARIZATION_GUIDE.md  STYLE_GUIDE.md  __init__.py  __main__.py  config_fast_caption.yaml  docker-compose.yml  hendrix_pipeline.py  install.sh  install_core.sh  next_steps_menu.sh  pyproject.toml  pytest.ini  requirements-all.txt  requirements-audio.txt  requirements-base.txt  requirements-captioning.txt  requirements-character-dialogue.txt  (+9 more)
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  model_request.md
.github/workflows/: ci.yml
archive/: analyze_requirements.py  download_new_video.sh  download_test_video.sh  test_gpu_usage.py
archive/Hendrix_Character_Dialogue_Analysis/: .gitignore  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  README.md
archive/Hendrix_Character_Dialogue_Analysis/audio_processing_branch/: COMPLETE_PIPELINE_EVALUATION.md  README.md  requirements.txt
archive/Hendrix_Character_Dialogue_Analysis/audio_processing_branch/scripts/: analyze_emotions.py  analyze_results.py  complete_audio_pipeline.py  test_complete_pipeline.py  test_emotion_component.py  test_emotion_debug.py  test_setup.py  test_whisper_youtube.py
archive/Hendrix_Character_Dialogue_Analysis/visual_processing_branch/: DOCUMENTATION_UPDATE_SUMMARY.md  ELEPHANTS_DREAM_ANALYSIS.md  ENHANCED_ARCHITECTURE_DOCUMENTATION.md  OPTIMIZED_PIPELINE_RESULTS.md  OUTPUT_FILES_GUIDE.md  SCHEMA_FIXES_SUMMARY.md  TODO_UPDATES_AND_SYNC_STATUS.md
archive/Hendrix_Character_Dialogue_Analysis/visual_processing_branch/configs/: __init__.py
archive/Hendrix_Comprehensive_Captioning/: .gitignore  CLAUDE.md  README.md  __init__.py  evaluate_improvements.py  output_formats.py  requirements.txt  utils.py
archive/Hendrix_Comprehensive_Captioning/config/: captioning_config.yaml  test_config.yaml
archive/Hendrix_Comprehensive_Captioning/scripts/: generate_comprehensive_captions.py
archive/Hendrix_Video/: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  TECHNICAL_OVERVIEW.md  config_test.yaml  download_models_auto.py  download_test_video.py  init_project.py  pipeline_comparison_analysis.md  run_with_local_cache.sh  setup.py  setup_env.sh  setup_model_cache.sh
archive/Hendrix_Video/docs/: api-reference.md  configuration.md  hardware-requirements.md  index.md  installation.md  troubleshooting.md
archive/Hendrix_Video/examples/: README.md  benchmark.py  custom_prompts.py
archive/Hendrix_Video/src/: main.py
archive/Hendrix_Video/tests/: test_integration.py  test_pipeline.py  test_video_utils.py
components/: __init__.py  config_manager.py  pipeline.py
components/captioning/: caption_generator.py  data_fusion_engine.py  improvements_summary.md  pipeline.py  prompt_templates.py  prompt_templates_improved.py  push_to_github.sh  run_and_evaluate_improved.sh  run_improved_pipeline.sh  run_pipeline.sh  test_llava.py  test_llava_simple.py
components/captioning/config/: captioning_config.yaml  test_config.yaml
components/character_dialogue/: LONG_VIDEO_SUPPORT.md  PROJECT_STRUCTURE.md
components/character_dialogue/audio_processing_branch/: .gitignore
components/character_dialogue/docs/: FINAL_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md
components/character_dialogue/old_reports/: emotion_recognition_report.md  output_summary.md  pyannote_test_results.md  speaker_diarization_report.md
components/character_dialogue/visual_processing_branch/: CLEANUP_SUMMARY.md  COMPLETE_PIPELINE_EVALUATION_REPORT.md  FINAL_SYNC_SUMMARY.md  LONG_VIDEO_ANALYSIS.md  PIPELINE_EVALUATION_REPORT.md  PRODUCTION_READY_SUMMARY.md  README.md  remove_old_backup.sh  requirements.txt
components/video_analysis/: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_GUIDE.md  __init__.py  analyze_results.py  config.yaml  config_mock.yaml  download_models.py  requirements-test.txt  requirements.txt  run_verbose.sh
components/video_analysis/docs/: architecture.md  models.md  performance.md  quickstart.md
components/video_analysis/examples/: basic_analysis.py  batch_processing.py
components/video_analysis/src/: main.py
components/video_analysis/tests/: create_test_video.py  test_models.py  test_stages.py  test_video_utils.py
configs/: base_config.yaml  models.yaml  optimized_pipeline.yaml
configs/pipeline/: default.yaml
docs/: DEPENDENCY_ANALYSIS.md  DEVELOPMENT_GUIDE.md  GETTING_STARTED.md  GIT_PUSH_GUIDE.md  MODEL_SWAPPING_GUIDE.md  USAGE_GUIDE.md
hendrix/: __init__.py  __version__.py  cli.py
hendrix/audio/: __init__.py  processor.py
hendrix/captioning/: __init__.py  generator.py
hendrix/core/: __init__.py  config.py  exceptions.py  pipeline.py
hendrix/video/: __init__.py  analyzer.py  scene_construction.py  shot_detection.py
requirements/: PYTHON_3.12_NOTES.md  README.md  all.txt  audio.txt  base.txt  captioning.txt  dev.txt  minimal.txt  test.txt  video.txt  visual.txt
scripts/: setup_github_repo.sh  test_gpu_components.py
scripts/pipeline/: run_complete.sh  run_full_pipeline_with_captioning.sh  run_gpu_optimized.sh  run_hendrix_complete.sh  run_large_video_test.sh  run_pipeline_final.sh  run_pipeline_optimized.sh  run_pipeline_optimized_v2.sh  run_pipeline_simple.sh  run_real_pipeline.sh
scripts/setup/: download_llava_next.py  download_models.sh  install_unified.sh  setup_environment.sh
scripts/utils/: monitor_gpu.sh  serve_results.py
tests/: conftest.py  test_config_manager.py  test_pipeline_integration.py
tests/test_hendrix/: __init__.py  test_audio.py  test_captioning.py  test_cli.py  test_core.py  test_video.py
(+70 files in other folders)
