[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hendrix-video-analysis"
version = "2.1.0"
description = "AI-powered video analysis pipeline with shot detection, transcription, and caption generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hendrix Contributors", email = "contact@hendrix-project.org"},
]
keywords = ["video", "analysis", "ai", "computer-vision", "speech-recognition", "captioning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/hendrix_12aug"
Documentation = "https://github.com/yourusername/hendrix_12aug/tree/main/docs"
Repository = "https://github.com/yourusername/hendrix_12aug"
Issues = "https://github.com/yourusername/hendrix_12aug/issues"

[project.scripts]
hendrix = "hendrix_pipeline:main"

[tool.setuptools]
packages = ["components", "hendrix_pipeline"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
    "model: marks tests that require model downloads",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["archive/", "build/", "dist/"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501"]
exclude = ["archive/", ".git/", "__pycache__/"]

[tool.coverage.run]
source = ["components"]
omit = ["*/tests/*", "*/archive/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]